--- a/src/Sidebarright.css
+++ b/src/Sidebarright.css
@@ -1,11 +1,13 @@
+
 .firstComponent{
 
     display: block;
     height: 500px;
     width: 400px;
-    background-color: blueviolet;
+    background-color: rgb(192, 190, 194);
     margin-left: 870px;
     border-radius: 40px;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.05) !important ;
 
 }
 
@@ -45,7 +47,10 @@
 .secondSmallDiv{
 
     height: 100px;
-    width: 400px;
+    width: 350px;
+    background-color: rgb(176, 176, 179);
+    margin-left: 25px;
+    border-radius: 30px;
 
 }
 
@@ -69,7 +74,11 @@
 .thirdSmallDiv{
 
     height: 100px;
-    width: 400px;
+    width: 350px;
+    background-color: rgb(176, 176, 179);
+    margin-left: 25px;
+    margin-top: 30px;
+    border-radius: 30px;
 
 }
 
@@ -90,10 +99,14 @@
 
 }
 
-.fourthSmalldiv{
+.fourthSmallDiv{
 
     height: 100px;
-    width: 400px;
+    width: 350px;
+    background-color: rgb(176, 176, 179);
+    margin-left: 25px;
+    margin-top: 30px;
+    border-radius: 30px;
 
 }
 
