--- a/src/components/Sidebarright.css
+++ b/src/components/Sidebarright.css
@@ -3,10 +3,10 @@
 
     display: block;
     height: 500px;
-    width: 400px;
+    width: 300px;
     background-color: rgb(192, 190, 194);
-    margin-left: 870px;
-    border-radius: 40px;
+    margin-left: 970px;
+    border-radius: 30px;
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.05) !important ;
 
 }
@@ -15,7 +15,7 @@
 .firstSmallDiv{
 
     height: 100px;
-    width: 400px;
+    width: 300px;
 
 }
 
@@ -47,14 +47,45 @@
 .secondSmallDiv{
 
     height: 100px;
-    width: 350px;
+    width: 250px;
     background-color: rgb(176, 176, 179);
     margin-left: 25px;
     border-radius: 30px;
+    display: flex;
 
 }
 
-.secondSmallDiv h4{
+.firstmicroDiv{
+
+    height: 100px;
+    width: 100px;
+    margin-left: 20px;
+    margin-top: 20px;
+    display: block;
+
+}
+
+.firstmicroDiv img{
+
+    height: 60px;
+    width: 60px;
+    display: flex;
+    /* margin-top: -15px; */
+    margin-left: 5px;
+    margin-bottom: -10px;
+
+}
+
+.secondmicroDiv{
+
+    height: 100px;
+    width: 150px;
+    margin-top: 30px;
+    margin-left: -40px;
+    display: block;
+
+}
+.secondmicroDiv h4{
 
     margin-top: 0px;
     margin-left: 20px;
@@ -63,22 +94,44 @@
 
 }
 
-.secondSmallDiv h5{
+.secondmicroDiv h5{
 
     margin-top: 2px;
     margin-left: 29px;
     font-size: 12px;
+    color: rgb(117, 115, 113);
 
 }
 
 .thirdSmallDiv{
 
     height: 100px;
-    width: 350px;
+    width: 250px;
     background-color: rgb(176, 176, 179);
     margin-left: 25px;
     margin-top: 30px;
     border-radius: 30px;
+    display: flex;
+
+}
+
+.firstMicroDiv{
+
+    height: 100px;
+    width: 100px;
+    margin-left: 20px;
+    margin-top: 20px;
+    display: block;
+
+}
+
+.secondMicroDiv{
+
+    height: 100px;
+    width: 150px;
+    margin-top: 30px;
+    margin-left: -40px;
+    display: block;
 
 }
 
@@ -102,12 +155,41 @@
 .fourthSmallDiv{
 
     height: 100px;
-    width: 350px;
+    width: 250px;
     background-color: rgb(176, 176, 179);
     margin-left: 25px;
     margin-top: 30px;
     border-radius: 30px;
+    display: flex;
 
+}
+
+.FirstmicroDiv{
+
+    height: 100px;
+    width: 100px;
+    margin-left: 20px;
+    margin-top: 20px;
+    display: block;
+
+}
+
+.SecondmicroDiv{
+
+    height: 100px;
+    width: 150px;
+    margin-top: 30px;
+    margin-left: -40px;
+    display: block;
+
+}
+
+.fourthSmallDiv img{
+
+    height: 60px;
+    width: 60px;
+    border-radius: 100px;
+    
 }
 
 .fourthSmallDiv h4{
