--- a/src/component/feed/Feed.css
+++ b/src/component/feed/Feed.css
@@ -1,8 +1,63 @@
-.new_post{
-    border: 2px solid ;
+:root {
+    --foreground: #f0f0f0; 
+    --shadow: rgba(0, 0, 0, 0.3); 
+    --black: #000000; 
+  }
+
+.live{
+    background: #ffebed;
     display: flex;
 }
-.btns{
+.photo{
+    background: #d7ffef;
     display: flex;
-    justify-content: space-between;
+}
+.feels{
+    background: #fff4d1;
+    display: flex;
+}
+
+.createPost{
+    background: var(--white);
+    box-shadow: 0 2px 5px 0 var(--shadow);
+    border-radius: 20px;
+    padding: 15px;
+    margin-bottom: 20px;
+}
+.post-text img{
+    width: 40px;
+    border-radius: 50px;
+    position: absolute;
+    left: 10px;
+    top: 30px;
+}
+.post-text input{
+    padding: 20px 20px 20px 60px;
+    width: 100%;
+    background: var(--foreground);
+    border: none;
+    height: 100px;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px 0 var(--shadow);
+    color: var(--black);
+}
+.post-text{
+    width: 100%;
+    position: relative;
+    margin-bottom: 30px;
+}
+.post-icon{
+    display: flex;
+    align-items: center;
+}
+.post-icon a{
+    margin-right: 10px;
+    padding: 5px;
+    border-radius: 10px;
+    font-size: 14px;
+    color: #262626;
+    font-weight: 500px;
+}
+.py-1 a {
+    display: flex;
 }
