--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -11,9 +11,9 @@ header{
     margin-right: 1px;
   }
   .Navbar img {
-    height:70px;
-    width: 70px;
-    border-radius: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 0px;
   }
   .Navbar svg {
     height:30px;
