--- a/src/component/Sidebarright/Suggest.css
+++ b/src/component/Sidebarright/Suggest.css
@@ -1,4 +1,3 @@
-
 .thirdpart {
   display: inline-block;
   margin-top: 480px;
@@ -128,7 +127,7 @@
   margin-left: -23px;
 }
 
-.firstComponent{
+.firstComponent {
 
   display: block;
   margin-top: 20px;
@@ -148,14 +147,14 @@
 }
 
 
-.firstSmallDiv{
+.firstSmallDiv {
 
   height: 80px;
   width: 375px;
 
 }
 
-.firstSmallDiv h4{
+.firstSmallDiv h4 {
 
   margin-left: 20px;
   padding-top: 20px;
@@ -164,7 +163,7 @@
 
 }
 
-.firstSmallDiv a{
+.firstSmallDiv a {
 
   text-decoration: none;
   color: #1E74FD;
@@ -178,14 +177,14 @@
 
 }
 
-.firstSmallDiv hr{
+.firstSmallDiv hr {
 
   margin-top: 10px;
   width: 100%;
 
 }
 
-.secondSmallDiv{
+.secondSmallDiv {
 
   height: 100px;
   width: 360px;
@@ -196,7 +195,7 @@
 
 }
 
-.firstmicroDiv{
+.firstmicroDiv {
 
   height: 100px;
   width: 100px;
@@ -206,7 +205,7 @@
 
 }
 
-.firstmicroDiv img{
+.firstmicroDiv img {
 
   height: 60px;
   width: 60px;
@@ -217,7 +216,7 @@
 
 }
 
-.secondmicroDiv{
+.secondmicroDiv {
 
   height: 100px;
   width: 150px;
@@ -226,7 +225,8 @@
   display: block;
 
 }
-.secondmicroDiv h4{
+
+.secondmicroDiv h4 {
 
   margin-top: 0px;
   margin-left: 20px;
@@ -235,7 +235,7 @@
 
 }
 
-.secondmicroDiv h5{
+.secondmicroDiv h5 {
 
   margin-top: 2px;
   margin-left: 29px;
@@ -244,7 +244,7 @@
 
 }
 
-.thirdSmallDiv{
+.thirdSmallDiv {
 
   height: 100px;
   width: 360px;
@@ -256,7 +256,7 @@
 
 }
 
-.firstMicroDiv{
+.firstMicroDiv {
 
   height: 100px;
   width: 100px;
@@ -266,7 +266,7 @@
 
 }
 
-.secondMicroDiv{
+.secondMicroDiv {
 
   height: 100px;
   width: 150px;
@@ -276,7 +276,7 @@
 
 }
 
-.thirdSmallDiv h4{
+.thirdSmallDiv h4 {
 
   margin-top: 0px;
   margin-left: 20px;
@@ -285,7 +285,7 @@
 
 }
 
-.thirdSmallDiv h5{
+.thirdSmallDiv h5 {
 
   margin-top: 2px;
   margin-left: 29px;
@@ -293,7 +293,7 @@
 
 }
 
-.fourthSmallDiv{
+.fourthSmallDiv {
 
   height: 100px;
   width: 360px;
@@ -305,15 +305,15 @@
 
 }
 
-.fourthSmallDiv img{
+.fourthSmallDiv img {
 
   height: 60px;
   width: 60px;
   border-radius: 100px;
-  
+
 }
 
-.fourthSmallDiv h4{
+.fourthSmallDiv h4 {
 
   margin-top: 0px;
   margin-left: 20px;
@@ -322,7 +322,7 @@
 
 }
 
-.fourthSmallDiv h5{
+.fourthSmallDiv h5 {
 
   margin-top: 2px;
   margin-left: 29px;
@@ -330,7 +330,7 @@
 
 }
 
-.FirstmicroDiv{
+.FirstmicroDiv {
 
   height: 100px;
   width: 100px;
@@ -340,7 +340,7 @@
 
 }
 
-.SecondmicroDiv{
+.SecondmicroDiv {
 
   height: 100px;
   width: 150px;
@@ -348,4 +348,131 @@
   margin-left: -40px;
   display: block;
 
+}
+
+.lastpart {
+  margin-top: 900px;
+  margin-left: -500px;
+  margin-right: 10px;
+  border-radius: 15px !important;
+  border: 0 !important;
+  width: 25% !important;
+  height: 400px;
+  width: 375px !important;
+  background-color: #fff;
+  background-clip: border-box;
+  box-shadow: 0 8px 30px rgba(0, 0, 0, .05) !important;
+  box-sizing: border-box;
+}
+
+.suppart2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.suppart a {
+  color: #1E74FD;
+  font-weight: bold;
+  font-family: Montserrat, sans-serif;
+}
+
+.A2 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.a {
+  border-radius: 8px;
+  background-color: #10d876;
+  color: white;
+  width: 60px;
+  height: 60px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.b {
+  margin-top: -10px;
+  font-size: 13px !important;
+  margin-left: 8px;
+}
+
+.b h4 {
+  font-weight: 700 !important;
+  font-family: Montserrat, sans-serif;
+}
+
+.b p {
+  margin-top: -10px;
+  font-family: Montserrat, sans-serif;
+  color: #adb5bd;
+  font-weight: 500 !important;
+}
+
+.B {
+  display: flex;
+  justify-content: space-between;
+}
+
+.c {
+  border-radius: 8px;
+  background-color: #FE9431;
+  color: white;
+  width: 60px;
+  height: 60px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.d {
+  margin-top: -10px;
+  font-size: 13px !important;
+  margin-left: 8px;
+}
+
+.d h4 {
+  font-weight: 700 !important;
+  font-family: Montserrat, sans-serif;
+}
+
+.d p {
+  margin-top: -10px;
+  font-family: Montserrat, sans-serif;
+  color: #adb5bd;
+  font-weight: 500 !important;
+}
+
+.C {
+  display: flex;
+  justify-content: space-between;
+}
+
+.e {
+  border-radius: 8px;
+  background-color: #1E74FD;
+  color: white;
+  width: 60px;
+  height: 60px;
+  font-weight: bold;
+  text-align: center;
+
+}
+
+.f {
+  margin-top: -10px;
+  font-size: 13px !important;
+  margin-left: 8px;
+}
+
+.f h4 {
+  font-weight: 700 !important;
+  font-family: Montserrat, sans-serif;
+}
+
+.f p {
+  margin-top: -10px;
+  font-family: Montserrat, sans-serif;
+  color: #adb5bd;
+  font-weight: 500 !important;
 }
