--- a/src/component/Sidebarright/Suggest.css
+++ b/src/component/Sidebarright/Suggest.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .suggest {
   text-align: center;
   border-radius: 10px;
@@ -53,7 +52,8 @@
   margin-top: 8px;
   font-weight: 600;
   color: #adb5bd;
-=======
+}
+
 
 .thirdpart {
   display: inline-block;
@@ -404,5 +404,5 @@
   margin-left: -40px;
   display: block;
 
->>>>>>> 009f6c7bc2a6b09d22b71c3e58f283713702b996
+
 }
