--- a/src/Post/Post.css
+++ b/src/Post/Post.css
@@ -1,13 +1,15 @@
 .post{
-    margin-top: 15px;
+    /* margin-top: 15px; */
     border-radius: 15px !important;
     border: 0 !important;
-    width:650px ;
-    height: 620px;
+    width:59rem ; 
+    height: 49rem;
     background-color: #fff;
     background-clip: border-box;
-    box-shadow: 0 8px 30px rgba(0, 0, 0, .05) !important;
-    margin-left: 300px;
+    /* box-shadow: 0 8px 30px rgba(0, 0, 0, .05) !important; */
+    /* margin-left: 300px; */
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15), 0px 2px 4px 0px rgba(0, 0, 0, 0.12); 
+    
 }
 .debut{
     display: flex;
@@ -76,15 +78,16 @@
 }
 .photo img{
     border-radius: .3rem !important;
-    height: 350px;
-    width: 600px;
+    height: 75% ;
+    width: 95% ;
     margin-left: 25px;
 }
 .icons{
     display: flex;
     align-items: center !important;
     margin-top:5px;
-  
+    margin-right: 24px;
+   
 }
 .like{
   display: flex;
