--- a/src/component/feed/Feed.css
+++ b/src/component/feed/Feed.css
@@ -3,7 +3,11 @@
     border-radius: 8px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     padding: 16px;
-  }
+    width: 59rem;
+    margin-bottom: 20px;
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15), 0px 2px 4px 0px rgba(0, 0, 0, 0.12); 
+    border-radius: 20px;  
+}
   
   .post-text {
     display: flex;
@@ -46,6 +50,7 @@
     font-size: 14px;
     color: #65676b;
     text-decoration: none;
+    
   }
   
   .post-icon a:hover {
@@ -56,9 +61,9 @@
     background: #ffebed;
   }
   
-  .photo {
+  /* .photo {
     background: #d7ffef;
-  }
+  } */
   
   .feels {
     background: #fff4d1;
@@ -72,3 +77,5 @@
   .py-1 a {
     display: flex;
   }
+
+
