--- a/src/component/Sidebarright/Suggest.css
+++ b/src/component/Sidebarright/Suggest.css
@@ -1,9 +1,11 @@
 .suggest {
+  margin-top: 0px;
   text-align: center;
   border-radius: 10px;
   box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15), 0px 2px 4px 0px rgba(0, 0, 0, 0.12); 
   width: 19rem;
   height: 25rem;
+  margin-bottom: 12px;
 }
 
 .block1 {
@@ -12,7 +14,7 @@
   margin-left: 21px;
   margin-right: 25px;
   padding-bottom: 24px;
-  margin-top: 28px;
+
 }
 
 .block2 {
