--- a/src/component/feed/Feed.css
+++ b/src/component/feed/Feed.css
@@ -61,9 +61,9 @@
     background: #ffebed;
   }
   
-  /* .photo {
+  .photos {
     background: #d7ffef;
-  } */
+  }
   
   .feels {
     background: #fff4d1;
