--- a/src/component/Sidebarright/Suggestpg.css
+++ b/src/component/Sidebarright/Suggestpg.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15), 0px 2px 4px 0px rgba(0, 0, 0, 0.12); 
   width: 19rem;
-  height: 26rem;
+  height: 27rem;
   margin-bottom: 12px;
 }
 .SG_group img {
@@ -29,8 +29,9 @@
     justify-content: space-between;
     margin-left: 12px;
     margin-right: -145px;
-    padding-top: 1rem;
+    padding-top: 25px;
     width: 17rem;
+    padding-bottom: 25px;
 }
 
 .block_1 {
