--- a/src/component/Sidebarright/Suggest.css
+++ b/src/component/Sidebarright/Suggest.css
@@ -1,4 +1,4 @@
-.suggest {
+/* .suggest {
   margin-top: 0px;
   text-align: center;
   border-radius: 10px;
@@ -6,18 +6,18 @@
   width: 19rem;
   height: 25rem;
   margin-bottom: 12px;
-}
-
+} */
+/* 
 .block1 {
-  display: flex; /* Ajoutez display: flex pour que justify-content fonctionne */
+  display: flex; 
   justify-content: space-between;
   margin-left: 21px;
   margin-right: 25px;
   padding-bottom: 24px;
   padding-top: 24px;
-}
+} */
 
-.block2 {
+/* .block2 {
   display: block;
 
 }
@@ -38,29 +38,29 @@
   height: 40px;
   width: 40px;
   margin-left: -15px;
-}
+} */
 
-.block3 a {
-  display: block; /* Ajoutez display: block pour appliquer height et width */
+/* .block3 a {
+  display: block; 
   border-radius: 100%;
   height: 40px;
   width: 40px;
   text-align: center;
   background-color: rgb(215, 215, 215);
   margin-left: -15px;
-}
+} */
 
-.block3 p {
+/* .block3 p {
   margin-top: 8px;
   font-weight: 600;
   color: #adb5bd;
-}
+} */
 .thirdpart {
   display: inline-block;
-  margin-top: 480px;
-  margin-right: 18px;
-  margin-left: -485px;
-  margin-bottom: 20px;
+  margin-top: 40px;
+  margin-right: 0px;
+  margin-left: 0px;
+  margin-bottom: 10px;
   border-radius: 15px !important;
   /* border: 0 !important; */
   width: 375px !important;
@@ -68,7 +68,7 @@
   height: 400px;
   background-color: #fff;
   background-clip: border-box;
-  box-shadow: 0 8px 30px rgba(0, 0, 0, .05) !important;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15), 0px 2px 4px 0px rgba(0, 0, 0, 0.12); 
   /* box-sizing: border-box; */
   text-align: center;
 }
@@ -77,7 +77,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* 1 */
   padding: 30px;
   padding-bottom: 10px;
 }
@@ -86,7 +85,6 @@
   color: #1E74FD;
   font-weight: bold;
   font-family: Montserrat, sans-serif;
-  /* 2 */
   text-decoration: none;
 }
 
@@ -197,7 +195,7 @@
   height: 450px;
   background-color: #fff;
   background-clip: border-box;
-  box-shadow: 0 8px 30px rgba(0, 0, 0, .05) !important;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15), 0px 2px 4px 0px rgba(0, 0, 0, 0.12); 
   /* box-sizing: border-box; */
   text-align: bottom;
 
@@ -408,18 +406,18 @@
 }
 
 .lastpart {
-  margin-top: 900px;
-  margin-left: -500px;
+  margin-top: 10px;
+  margin-left: 0px;
   margin-right: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 60px !important;
   border-radius: 15px !important;
   border: 0 !important;
   width: 25% !important;
-  height: 350px;
+  height: 340px !important;
   width: 375px !important;
   background-color: #fff;
   background-clip: border-box;
-  box-shadow: 0 8px 30px rgba(0, 0, 0, .05) !important;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15), 0px 2px 4px 0px rgba(0, 0, 0, 0.12); 
   box-sizing: border-box;
 }
 
@@ -427,25 +425,33 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 10px;
+  padding-bottom: 5px;
+
 }
 
 .suppart2 a {
   color: #1E74FD;
-  margin-top: 10px;
-  margin-right: 20px;
   font-weight: bold;
   font-family: Montserrat, sans-serif;
+  text-decoration: none;
+  margin-left: 210px;
 }
 
 .suppart2 h4{
 
   font-size: 20px;
-  margin-top: 10px;
-  margin-left: 20px;
+  margin-top: -10px;
+  margin-left: 0px;
   font-weight: 500;
 
 }
 
+/* .suppart2 hr{
+
+  color: black;
+
+} */
 .A2 {
   display: flex;
   justify-content: space-between;
